# Multi_MouseCanvas

./: Cargo.toml  README.md
src/: app.rs  canvas.rs  capture.rs  display_profiles.rs  export.rs  ipc.rs  main.rs  platform.rs  session.rs  tray.rs
src/app/: application_editor.rs  commands.rs  dialogs.rs  display_profile_editor.rs  monitor_selection.rs  performance_view.rs  settings_view.rs  state.rs  toolbar.rs  view.rs
src/app_colors/: registry.rs
src/canvas/: coordinates.rs  model.rs  preview.rs  rasterizer.rs  renderer.rs  tiles.rs  topology.rs
src/capture/: foreground.rs  sampler.rs  windows.rs
src/display_profiles/: model.rs  store.rs
src/export/: compositor.rs  image_export.rs  model.rs  overlays.rs
src/platform/: display.rs  display_identity.rs  windows.rs
src/session/: client.rs  controller.rs  engine.rs  error.rs  events.rs  export_snapshot.rs  manifest.rs  model.rs  path_builder.rs  recovery.rs  simulation.rs  snapshot.rs  statistics.rs
src/settings/: model.rs  storage.rs
