[package]
name = "multi_mouse_canvas"
version = "0.1.0"
edition = "2021"
description = "MultiMouseCanvas standalone desktop application"

[package.metadata.bundle]
name = "MultiMouseCanvas"

[dependencies]
eframe = "0.28"
egui = "0.28"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
directories = "5"
thiserror = "1"
image = { version = "0.25", default-features = false, features = ["png"] }
windows = { version = "0.58", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging", "Win32_System_Threading", "Win32_System_ProcessStatus", "Win32_Graphics_Gdi", "Win32_UI_HiDpi"] }

[target.'cfg(target_os = "windows")'.dependencies]
tray-icon = "0.19"

[dev-dependencies]
tempfile = "3"
